--- a/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
@@ -39,7 +39,7 @@
           disabled="#{task.delayTimestamp == null}" icon="si si-button-refresh-arrows" id="taskClearDelayBtn" />
         <p:menuitem value="Expire now" actionListener="#{tasksDetailsIvyDevWfBean.expireTask}" update="taskDetail, workflowEvents:workflowEvents, @form"
           disabled="#{!task.state.active}" icon="si si-alarm-bell-timer"
-          rendered="#{engineModeIvyDevWfBean.demoOrDesigner}" id="taskExpireBtn" />
+          rendered="#{permissionsBean.demoDevModeOrAdmin}" id="taskExpireBtn" />
       </p:menu>
     </h:form>
   </div>
