--- a/dev-workflow-ui/webContent/view/signals.xhtml
+++ b/dev-workflow-ui/webContent/view/signals.xhtml
@@ -6,7 +6,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
+      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotDevModeOrAdmin}" />
 
       <div class="layout-dashboard">
         <div class="grid">
