--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -10,7 +10,7 @@
         <div class="card">
           <p:dataTable id="cases" var="case" value="#{casesIvyDevWfBean.casesDataModel}" widgetVar="casesTable"
             styleClass="ui-fluid" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom" rows="10"
-            lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
+            lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
             <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
             <f:facet name="header">
               <div class="flex justify-content-between mb-3 pretty-search">
@@ -33,7 +33,7 @@
               </div>
             </f:facet>
 
-            <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}" width="75">
+            <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}" width="90px" resizable="false">
               <jc:stateBadge id="caseState" data="#{case}" />
             </p:column>
 
@@ -55,10 +55,9 @@
               <jc:time id="endTime" datetime="#{case.endTimestamp}" />
             </p:column>
 
-            <p:column width="30">
-              <p:commandLink id="caseActionsBtn" styleClass="text-color flex justify-content-center">
-                <i class="more-options-menu si si-navigation-menu-horizontal-filled" />
-              </p:commandLink>
+            <p:column width="30px" resizable="false">
+              <p:commandButton id="caseActionsBtn" icon="si si-navigation-menu-horizontal-filled"
+                styleClass="ui-button-flat text-color action-button" />
               <p:menu id="caseActionsMenu" overlay="true" trigger="caseActionsBtn" my="right top" at="right bottom"
                 style="width: 200px">
                 <p:menuitem id="openCaseDetailsBtn" value="Open case details" url="#{case.detailLink}"
