--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -14,7 +14,7 @@
         listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
 
       <div class="card ui-fluid">
-        <h4 class="m-0">Profile</h4>
+        <h4>Profile</h4>
         <h:form id="profileForm">
           <p:growl id="growl" showDetail="true" />
           <p:panelGrid columns="1" layout="flex" styleClass="profile-card">
