--- a/dev-workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/dev-workflow-ui/webContent/resources/css/workflow-ui.css
@@ -44,12 +44,19 @@ a > i.detail-btn {
 .layout-horizontal .menu-wrapper .layout-menu-container .layout-menu > li.active-nav-page > a,
 .layout-horizontal .menu-wrapper .layout-menu-container .layout-menu > li > ul li > a.active-nav-submenu {
   background-color: var(--primary-lighter-color);
-  color: var(--primary-color);
+}
+
+/* Processes */
+.starts-table .start-description {
+  color: var(--text-color-secondary);
 }
 
 /* Tables */
 .table-header-none thead {
   display: none;
+}
+.ui-datatable tbody tr td {
+  height: 45px;
 }
 .ui-datatable .ui-column-filter {
   display: none;
@@ -64,14 +71,24 @@ body .ui-datatable .ui-datatable-data > tr.ui-state-highlight {
   background: var(--surface-c);
   color: var(--text-color);
 }
+body .ui-datatable .ui-datatable-data > tr.ui-state-hover:has(.ui-button.ui-state-hover) {
+  background: inherit;
+}
+
 body .ui-datatable .ui-datatable-header:has(.pretty-search) {
   background: none;
   border: none;
   padding: 0;
   font-weight: 400;
 }
+.ui-datatable .action-button {
+  height: 30px;
+}
 .more-options-menu {
   padding: 0.25rem 0.5rem;
+}
+body .ui-datatable .ui-datatable-data > tr > td.center-table-cell {
+  text-align: center;
 }
 
 /* Dialog */
@@ -224,8 +241,8 @@ body .custom-accordion.ui-accordion .ui-accordion-header:first-child {
 }
 
 /* Profile */
-.profile-card .ui-panelgrid-content > div:nth-child(odd) {
-  font-weight: bold;
+.profile-card .ui-panelgrid-content > div {
+  padding-block: 0.3rem;
 }
 .profile-card .ui-panelgrid-content > div:nth-child(even) {
   padding-top: 0;
@@ -298,46 +315,3 @@ body .notification-scroll>.ui-datascroller-content::-webkit-scrollbar {
 .table-icon.light {
   opacity: 0.5;
 }
-
-/* Freya adjustments */
-body .ui-button.ui-button-text-icon-left .ui-button-text {
-  padding: .3rem 1rem .3rem 2rem;
-}
-body .ui-datatable .ui-datatable-data > tr > td {
-  padding: 0.5rem;
-}
-body .ui-datatable .ui-datatable-data > tr > td:has(> .state-badge:only-child),
-body .ui-datatable .ui-datatable-data > tr > td.center-table-cell {
-  text-align: center;
-}
-
-body .ui-datatable thead th,
-body .ui-datatable thead th.ui-state-active{
-  padding: 0.75rem;
-  background: var(--surface-a);
-}
-
-body .ui-datatable thead th .ui-sortable-column-icon.ui-icon-carat-2-n-s {
-  font-size: 0.75rem;
-}
-
-body .ui-datatable .ui-paginator.ui-paginator-bottom {
-  padding: 0.5rem;
-  padding-bottom: 0rem;
-  border: 0;
-}
-
-.layout-wrapper.layout-designer.layout-horizontal .menu-wrapper .layout-menu-container .layout-menu > li a > span {
-  font-size: 14px;
-  font-weight: 300;
-}
-
-.layout-wrapper.layout-designer.layout-horizontal .menu-wrapper .layout-menu-container .layout-menu > li > a > i {
-  font-size: 18px;
-}
-
-.ui-column-title:empty + .ui-sortable-column-icon {
-  margin: 0;
-}
-
-
