--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -28,9 +28,8 @@
                     <p:tooltip for="startedProcess" value="#{start.displayName}" position="top" />
 
                     <div class="flex">
-                      <p:commandLink id="startedProcessMenuLink" styleClass="text-color flex justify-content-center">
-                        <i class="more-options-menu si si-navigation-menu-horizontal-filled" />
-                      </p:commandLink>
+                      <p:commandButton id="startedProcessMenuLink" icon="si si-navigation-menu-horizontal-filled"
+                        styleClass="ui-button-flat text-color action-button" />
                       <p:menu id="startsActionsMenu" overlay="true" trigger="startedProcessMenuLink" my="right top"
                         at="right bottom" style="width: 200px">
                         <p:menuitem value="Start process" action="#{start.execute}" id="startProcessBtn"
@@ -67,24 +66,23 @@
                 <h4 class="m-0">Open Tasks</h4>
               </div>
               <p:dataTable id="activeTasks" var="task" value="#{homepageIvyDevWfBean.tasksDataModel}" lazy="true"
-                rows="6" paginator="true" paginatorAlwaysVisible="false"
+                rows="6" paginator="true" paginatorAlwaysVisible="false" resizableColumns="true"
                 rendered="#{homepageIvyDevWfBean.tasksDataModel.size gt 0}" paginatorPosition="bottom" selectionMode="single">
                 <p:ajax event="rowSelect" listener="#{homepageIvyDevWfBean.executeTaskRow}" />
-                <p:column headerText="Prio" sortBy="#{task.priority}" styleClass="center-table-cell" width="10">
+                <p:column headerText="Prio" sortBy="#{task.priority}" styleClass="center-table-cell" width="50px" resizable="false">
                   <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
                   <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
                 </p:column>
-                <p:column headerText="Name" sortBy="#{task.name}" responsivePriority="1" width="140">
+                <p:column headerText="Name" sortBy="#{task.name}" responsivePriority="1">
                   <h:outputText id="taskName" value="#{task.name}" styleClass="white-space-nowrap"/>
                   <p:tooltip for="taskName" value="#{task.name}" position="top" />
                 </p:column>
-                <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}" responsivePriority="2" width="40">
+                <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}" responsivePriority="2" width="100px">
                   <jc:time id="expiryTime" datetime="#{task.expiryTimestamp}" />
                 </p:column>
-                <p:column width="5">
-                  <p:commandLink id="taskActionsBtn" styleClass="text-color flex justify-content-center">
-                    <i class="more-options-menu si si-navigation-menu-horizontal-filled" />
-                  </p:commandLink>
+                <p:column width="30px" resizable="false">
+                  <p:commandButton id="taskActionsBtn" icon="si si-navigation-menu-horizontal-filled"
+                    styleClass="ui-button-flat text-color action-button" />
                   <p:menu id="taskActionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom"
                     style="width: 200px">
                     <p:menuitem value="Start task" actionListener="#{homepageIvyDevWfBean.executeTask(task)}"
@@ -107,11 +105,11 @@
               </div>
               <p:dataTable id="startedCases" var="case" value="#{homepageIvyDevWfBean.startedCasesDataModel}"
                 widgetVar="casesTable" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom"
-                rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single">
+                rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
                 <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
 
                 <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}"
-                  width="60">
+                  width="90px" resizable="false">
                   <jc:stateBadge id="caseState" data="#{case}"/>
                 </p:column>
 
@@ -120,7 +118,7 @@
                 </p:column>
 
                 <p:column headerText="Start" sortBy="#{case.startTimestamp}" responsivePriority="2"
-                  sortOrder="descending" width="100">
+                  sortOrder="descending" width="150px">
                   <jc:time id="startTime" datetime="#{case.startTimestamp}" />
                 </p:column>
 
@@ -128,10 +126,9 @@
                   <jc:time id="endTime" datetime="#{case.endTimestamp}" />
                 </p:column>
 
-                <p:column width="30" styleClass="text-center">
-                  <p:commandLink id="caseActionsBtn" styleClass="text-color flex justify-content-center">
-                    <i class="more-options-menu si si-navigation-menu-horizontal-filled" />
-                  </p:commandLink>
+                <p:column width="30px" styleClass="text-center" resizable="false">
+                  <p:commandButton id="caseActionsBtn" icon="si si-navigation-menu-horizontal-filled"
+                    styleClass="ui-button-flat text-color action-button" />
                   <p:menu id="caseActionsMenu" overlay="true" trigger="caseActionsBtn" my="right top"
                     at="right bottom" style="width: 200px">
                     <p:menuitem id="openCaseDetailsBtn" value="Open case details"
