--- a/dev-workflow-ui/webContent/includes/components/statistics/caseStateGraph.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/statistics/caseStateGraph.xhtml
@@ -6,8 +6,8 @@
   <ui:composition template="/includes/template/statisticsCardBare.xhtml">
     <ui:define name="content">
       <h4>Cases by state</h4>
-      <p:donutChart model="#{statisticsBean.caseByStateGraph}" style="max-height: 200px; max-width: 340px;"
-        rendered="#{statisticsBean.caseByStateGraph != null}"/>
+      <p:donutChart model="#{statisticsBean.caseByStateGraph}" style="align-self: center; height: 18rem; width: 18rem;"
+        rendered="#{statisticsBean.caseByStateGraph != null}" />
       <h:panelGroup layout="block" rendered="#{statisticsBean.caseByStateGraph == null}"
         styleClass="h-full flex flex-column align-items-center justify-content-center">
         <i class="pi pi-chart-pie text-7xl mb-4" />
