--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -33,20 +33,14 @@
         <p:commandButton update="@form" id="login" actionListener="#{loginIvyDevWfBean.customLogin}" value="Sign In" icon="si si-login-3" />
         <p:messages globalOnly="true" id="loginMessage" />
 
-        <section class="oauth-providers">
-          <ul style="list-style-type: none; padding-left: 0px">
-            <c:forEach var="authProvider" items="#{loginIvyDevWfBean.getOAuthProviders()}">
-              <li>
-                <h:outputLink value="${authProvider.link}">
-                  <h:outputText value="${authProvider.image}" escape="false" />
-                    <span style="position: relative; bottom: 5px;">
-                      Log in with <h:outputText value="${authProvider.displayName}" />
-                    </span>
-                </h:outputLink>
-              </li>
-            </c:forEach>
-          </ul>
-        </section>
+        <h:panelGroup rendered="#{loginIvyDevWfBean.OAuthProvider != null}" styleClass="oauth-providers">
+          <h:outputLink value="#{loginIvyDevWfBean.OAuthProvider.link}">
+            <h:outputText value="#{loginIvyDevWfBean.OAuthProvider.image}" escape="false" />
+            <span style="position: relative; bottom: 5px;">
+              Log in with <h:outputText value="#{loginIvyDevWfBean.OAuthProvider.displayName}" />
+            </span>
+          </h:outputLink>
+        </h:panelGroup>
 
       </div>
       <div class="login-footer">
