XIVY-14745 Add User detail page

--- a/dev-workflow-ui/webContent/resources/components/user.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/user.xhtml
@@ -6,6 +6,10 @@
   <cc:attribute name="user" />
 </cc:interface>
 
+<f:metadata>
+  <f:viewParam name="isAdmin" value="#{permissionsBean.admin}" />
+</f:metadata>
+
 <cc:implementation>
   <ui:param name="userModel" value="#{userComponentIvyDevWfBean.toComponentModel(cc.attrs.user)}" />
   <h:panelGroup styleClass="flex align-items-center">
@@ -13,6 +17,12 @@
       <i class="mr-1 si-lg #{userModel.cssIcon}" />
     </h:panelGroup>
     <h:outputText id="userName" value="#{userModel.name}" />
+    <p:spacer width="5" />
+    <h:panelGroup rendered="#{not empty userModel.securityMemberId and !isAdmin}">
+      <a href="#{userIvyDevWfBean.createUserLink(userModel.securityMemberId)}" >
+        <i class="fa fa-link" />
+      </a>
+    </h:panelGroup>
   </h:panelGroup>
 </cc:implementation>
 </html>
