--- a/dev-workflow-ui/webContent/view/user.xhtml
+++ b/dev-workflow-ui/webContent/view/user.xhtml
@@ -18,7 +18,6 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <div class="layout-dashboard">
-
         <div class="grid">
           <div class="col-6">
             <div class="card">
@@ -28,8 +27,7 @@
                   <h6 class="m-0">Description</h6>
                 </div>
               </div>
-              <ui:include
-                src="/includes/components/userDetails/userdetail-information.xhtml" />
+              <ui:include src="/includes/components/userDetails/userdetail-information.xhtml" />
             </div>
           </div>
           <div class="col-6">
@@ -40,8 +38,7 @@
                   <h6 class="m-0">Roles</h6>
                 </div>
               </div>
-              <ui:include
-                src="/includes/components/userDetails/userdetail-roles.xhtml" />
+              <ui:include src="/includes/components/userDetails/userdetail-roles.xhtml" />
             </div>
           </div>
           <div class="col-12">
@@ -52,8 +49,7 @@
                   <h6 class="m-0">Tasks</h6>
                 </div>
               </div>
-              <ui:include
-                src="/includes/components/userDetails/userdetail-usertasks.xhtml" />
+              <ui:include src="/includes/components/userDetails/userdetail-usertasks.xhtml" />
             </div>
           </div>
           <div class="col-12">
@@ -64,8 +60,7 @@
                   <h6 class="m-0">Cases</h6>
                 </div>
               </div>
-              <ui:include
-                src="/includes/components/userDetails/userdetail-usercases.xhtml" />
+              <ui:include src="/includes/components/userDetails/userdetail-usercases.xhtml" />
             </div>
           </div>
         </div>
